fix a bug about the categories

--- a/template/bootstrap/preamble.html
+++ b/template/bootstrap/preamble.html
@@ -9,7 +9,7 @@
       <a class="brand" href=".">{{site-title}}</a>
       <div class="nav-collapse collapse">
         <ul class="nav">
-          <li><a href="{{nav-tags}}" class="menu">Tags</a></li>
+          <li><a href="{{nav-categories}}" class="menu">Categories</a></li>
           <li><a href="{{nav-about}}" class="menu">About Me</a></li>
         </ul>
         {{#enable-google-search}}
